--- a/packages/stream_feed_flutter/pubspec.yaml
+++ b/packages/stream_feed_flutter/pubspec.yaml
@@ -17,21 +17,18 @@ dependencies:
   image_picker: ^0.8.6+2
   path_provider: ^2.0.12
   photo_view: ^0.14.0
-  rxdart: ^0.27.7
+  rxdart: ^0.28.0
   stream_feed_flutter_core:
     path: ../stream_feed_flutter_core
   timeago: ^3.3.0
   url_launcher: ^6.1.9
   video_thumbnail: ^0.5.3
 
-dependency_overrides:
-  photo_view:
-    git:
-      url: https://github.com/bluefireteam/photo_view
-      ref: 8156907eecfa812b181a5a729d790f6d399f311b
 
 dev_dependencies:
-  golden_toolkit: ^0.13.0
+  flutter_test:
+    sdk: flutter
+  golden_toolkit: ^0.15.0
   mocktail_image_network: ^0.3.1
   nested: ^1.0.0
   test: ^1.14.4
